# BarberShopManager

./: .gitignone  .gitignore  CMakeLists.txt  README.md  quick-build-release.sh
docs/: CONFLICT_GUIDE.md
lib/: CMakeLists.txt
lib/include/core/: Scheduler.h
lib/include/model/: Appointment.h  Customer.h  Employee.h  Person.h  Role.h  Salon.h  Service.h  TimeSlot.h
lib/include/storage/: IRepository.h  InMemoryRepository.h
lib/src/: Appointment.cpp  CMakeLists.txt  Customer.cpp  Employee.cpp  InMemoryRepository.cpp  Person.cpp  Salon.cpp  Scheduler.cpp  Service.cpp  TimeSlot.cpp
project/: CMakeLists.txt  main.cpp
project/controllers/: AppointmentController.cpp  AppointmentController.h  SalonController.cpp  SalonController.h
project/ui/: AppointmentDialog.cpp  AppointmentDialog.h  AppointmentDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/: CMakeLists.txt  test_scheduler.cpp
